docker: specify container user as nobody
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -6,6 +6,9 @@ services:
     image: '{{ coturn_cont_image }}'
     restart: 'always'
     network_mode: 'host'
+    user: '{{ coturn_cont_uid }}'
+    tmpfs:
+      - '/run'
     volumes:
       - '{{ coturn_cont_config_vol }}:/config'
       - '{{ coturn_cont_certs_vol }}:/certs'
