config: rename relay port variable
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/templates/turnserver.conf.j2
+++ b/templates/turnserver.conf.j2
@@ -148,8 +148,8 @@ external-ip={{ coturn_external_ip }}
 # Lower and upper bounds of the UDP relay endpoints:
 # (default values are 49152 and 65535)
 #
-min-port={{ coturn_min_port }}
-max-port={{ coturn_max_port }}
+min-port={{ coturn_relay_min_port }}
+max-port={{ coturn_relay_max_port }}
 
 # Uncomment to run TURN server in 'normal' 'moderate' verbose mode.
 # By default the verbose mode is off.
