docker: mount /data volume for SQLite DB
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -12,5 +12,6 @@ services:
     volumes:
       - '{{ coturn_cont_config_vol }}:/config'
       - '{{ coturn_cont_certs_vol }}:/certs'
+      - '{{ coturn_cont_data_vol }}:/data'
     command: |
       -c /config/turnserver.conf
