--- a/templates/turnserver.conf.j2
+++ b/templates/turnserver.conf.j2
@@ -291,7 +291,7 @@ oauth
 # The default file name is /var/db/turndb or /usr/local/var/db/turndb or
 # /var/lib/turn/turndb.
 #
-#userdb=/var/db/turndb
+userdb=/data/coturn.db
 
 # PostgreSQL database connection string in the case that you are using PostgreSQL
 # as the user database.
