--- a/templates/turnserver.conf.j2
+++ b/templates/turnserver.conf.j2
@@ -153,9 +153,7 @@ max-port={{ coturn_relay_max_port }}
 
 # Uncomment to run TURN server in 'normal' 'moderate' verbose mode.
 # By default the verbose mode is off.
-{% if coturn_verbose %}
-verbose
-{% endif %}
+{% if not coturn_verbose %}#{% endif %}verbose
 
 # Uncomment to run TURN server in 'extra' verbose mode.
 # This mode is very annoying and produces lots of output.
@@ -166,9 +164,7 @@ verbose
 # Uncomment to use fingerprints in the TURN messages.
 # By default the fingerprints are off.
 #
-{% if coturn_fingerprint_enabled %}
-fingerprint
-{% endif %}
+{% if not coturn_fingerprint_enabled %}#{% endif %}fingerprint
 
 # Uncomment to use long-term credential mechanism.
 # By default no credentials mechanism is used (any user allowed).
@@ -194,9 +190,7 @@ fingerprint
 # https://prometheus.io/docs/introduction/overview/
 # https://prometheus.io/docs/concepts/data_model/
 #
-{% if coturn_metrics_enabled %}
-prometheus
-{% endif %}
+{% if not coturn_metrics_enabled %}#{% endif %}prometheus
 
 # TURN REST API flag.
 # (Time Limited Long Term Credential)
@@ -233,9 +227,7 @@ prometheus
 # Use either lt-cred-mech or use-auth-secret in the conf
 # to avoid any confusion.
 #
-{% if coturn_auth_enabled %}
-use-auth-secret
-{% endif %}
+{% if not coturn_auth_enabled %}#{% endif %}use-auth-secret
 
 # 'Static' authentication secret value (a string) for TURN REST API only.
 # If not set, then the turn server
@@ -255,9 +247,7 @@ server-name={{ coturn_domain }}
 
 # Flag that allows oAuth authentication.
 #
-{% if coturn_auth_enabled %}
-oauth
-{% endif %}
+{% if not coturn_auth_enabled %}#{% endif %}oauth
 
 # 'Static' user accounts for the long term credentials mechanism, only.
 # This option cannot be used with TURN REST API.
@@ -730,9 +720,7 @@ no-cli
 # If it is enabled it also enables a http a simple static banner page
 # with a small reminder that the admin page is available only on https.
 #
-{% if coturn_admin_enabled %}
-web-admin
-{% endif %}
+{% if not coturn_admin_enabled %}#{% endif %}web-admin
 
 # Local system IP address to be used for Web-admin server endpoint. Default value is 127.0.0.1.
 #
