--- a/templates/turnserver.conf.j2
+++ b/templates/turnserver.conf.j2
@@ -60,6 +60,8 @@ alt-tls-listening-port={{ coturn_stun_tls_alt_port }}
 #listening-ip=172.17.19.101
 #listening-ip=10.207.21.238
 #listening-ip=2607:f0d0:1002:51::4
+listening-ip=0.0.0.0
+listening-ip=::
 
 # Auxiliary STUN/TURN server listening endpoint.
 # Aux servers have almost full TURN and STUN functionality.
